--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2014-07-20 10:28:10 -0500 
+%% Created for Jeff Erickson at 2014-07-22 12:54:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{gk-kten-93,
+	Author = {Jay R. Goldman and Louis H. Kauffman},
+	Date-Added = {2014-07-22 17:53:29 +0000},
+	Date-Modified = {2014-07-22 17:54:08 +0000},
+	Journal = {Adv. Appl. Math.},
+	Pages = {267--306},
+	Read = {1},
+	Title = {Knots, tangles, and electrical networks},
+	Volume = {14},
+	Year = {1993}}
 
 @inproceedings{addf-spt-13,
 	Arxiv = {1309.0683},
@@ -174,9 +185,10 @@
 	Author = {William T. Tutte},
 	Comments = {Tutte polynomial, deletion-contraction formula},
 	Date-Added = {2014-07-19 20:03:01 +0000},
-	Date-Modified = {2014-07-19 20:04:11 +0000},
+	Date-Modified = {2014-07-20 21:02:47 +0000},
 	Journal = {Canad. J. Math.},
 	Pages = {80--91},
+	Read = {1},
 	Title = {A contribution to the theory of chromatic polynomials},
 	Volume = {6},
 	Year = {1954}}
