--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,83 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2014-07-22 12:54:11 -0500 
+%% Created for Jeff Erickson at 2014-08-05 11:45:19 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ww-kp-00,
+	Author = {Steven D. Welsh and Dominic J. A. Welsh},
+	Date-Added = {2014-08-04 22:37:04 +0000},
+	Date-Modified = {2014-08-04 22:38:15 +0000},
+	Journal = {J. Graph Theory},
+	Number = {1},
+	Pages = {100--111},
+	Read = {1},
+	Title = {Knot Graphs},
+	Volume = {34},
+	Year = {2000}}
+
+@article{n-dlsg-02,
+	Author = {Ryo Nikkuni},
+	Date-Added = {2014-07-29 19:33:54 +0000},
+	Date-Modified = {2014-07-29 19:42:48 +0000},
+	Journal = {Revista Matem{\'a}tica Computense},
+	Number = {2},
+	Pages = {543--570},
+	Read = {1},
+	Title = {Delta link-homotopy on spatial graphs},
+	Volume = {15},
+	Year = {2002}}
+
+@article{kn-dmpil-05,
+	Author = {Taizo Kenenobu and Ryo Nikkuni},
+	Date-Added = {2014-07-29 19:32:49 +0000},
+	Date-Modified = {2014-07-29 19:33:31 +0000},
+	Journal = {Topology Appl.},
+	Pages = {91--104},
+	Read = {1},
+	Title = {Delta move and polynomial invariants of links},
+	Volume = {146--147},
+	Year = {2005}}
+
+@incollection{b-tp1gt-10,
+	Author = {Thomas Brylawski},
+	Booktitle = {Matroid Theory and Its Applications},
+	Date-Added = {2014-07-25 18:18:52 +0000},
+	Date-Modified = {2014-07-25 18:30:21 +0000},
+	Editor = {Adriano Barlotti},
+	Number = {83 (Varenna, Italy 1980)},
+	Pages = {125--275},
+	Publisher = {Springer-Verlag},
+	Series = {CIME Summer Schools},
+	Title = {The {Tutte} polynomial. {Part} {I}: {General} theory},
+	Year = {2010}}
+
+@article{b-cmsn-71,
+	Author = {Thomas Brylawski},
+	Date-Added = {2014-07-25 18:14:51 +0000},
+	Date-Modified = {2014-07-25 18:30:44 +0000},
+	Journal = {Trans. Amer. Math. Soc.},
+	Pages = {1--22},
+	Read = {1},
+	Title = {A combinatorial model for series-parallel networks},
+	Volume = {154},
+	Year = {1971}}
+
+@article{c-him-67,
+	Author = {Henry H. Crapo},
+	Date-Added = {2014-07-25 18:00:37 +0000},
+	Date-Modified = {2014-07-25 18:01:26 +0000},
+	Journal = {J. Comb. Theory},
+	Number = {4},
+	Pages = {406--417},
+	Read = {1},
+	Title = {A higher invariant for matroids},
+	Volume = {2},
+	Year = {1967}}
 
 @article{gk-kten-93,
 	Author = {Jay R. Goldman and Louis H. Kauffman},
@@ -217,10 +288,11 @@
 @article{acgp-frpwg-00,
 	Author = {Dan Archdeacon and Charles J. Colbourn and Isidoro Gitler and J. Scott Provan},
 	Date-Added = {2014-07-12 16:09:13 +0000},
-	Date-Modified = {2014-07-12 16:10:13 +0000},
+	Date-Modified = {2014-07-24 23:05:56 +0000},
 	Journal = {J. Graph Theory},
 	Number = {2},
 	Pages = {83--93},
+	Read = {1},
 	Title = {Four-terminal reducibility and projective-planar wye-delta-wye-reducible graphs},
 	Volume = {33},
 	Year = {2000}}
@@ -10260,8 +10332,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{w-asc2-24,
 	Author = {Hermann Weyl},
 	Date-Added = {2009-11-25 15:06:56 -0600},
-	Date-Modified = {2009-11-25 15:08:07 -0600},
-	Journal = {Revista Mathematical Hispano-Americana},
+	Date-Modified = {2014-07-29 19:35:06 +0000},
+	Journal = {Revista Matematica Hispano-Americana},
 	Note = {\textit{Gesammelte Abhandlungen} 2:416--432, 1968},
 	Pages = {1--9, 33--41},
 	Title = {An{\'a}lisis situs combinatorio (continuaci{\'o}n)},
@@ -10282,8 +10354,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{w-asc-23,
 	Author = {Hermann Weyl},
 	Date-Added = {2009-11-25 14:44:26 -0600},
-	Date-Modified = {2009-11-25 14:46:07 -0600},
-	Journal = {Revista Mathematical Hispano-Americana},
+	Date-Modified = {2014-07-29 19:35:00 +0000},
+	Journal = {Revista Matematica Hispano-Americana},
 	Note = {\textit{Gesammelte Abhandlungen} 2:390--415, 1968},
 	Pages = {209--218, 241--248, 278--279},
 	Title = {An{\'a}lisis situs combinatorio},
