--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,70 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-04-22 09:04:07 -0500 
+%% Created for Jeff Erickson at 2015-06-29 15:13:58 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cct-egbep-03,
+	Author = {Chan, Wun-Tat and Chin, Francis Y. L. and Ting, Hing-Fung},
+	Date-Added = {2015-06-29 20:09:28 +0000},
+	Date-Modified = {2015-06-29 20:10:12 +0000},
+	Journal = {Algorithmica},
+	Number = {4},
+	Pages = {343--359},
+	Title = {Escaping a grid by edge-disjoint paths},
+	Volume = {36},
+	Year = {2003}}
+
+@inproceedings{cct-faffd-99,
+	Author = {Chan, Wun-Tat and Chin, Francis Y. L. and Ting, Hing-Fung},
+	Booktitle = {Proc. 10th Int. Symp. Algorithms Comput.},
+	Comments = {Edge-disjoint only},
+	Date-Added = {2015-06-29 20:06:07 +0000},
+	Date-Modified = {2015-06-29 20:13:05 +0000},
+	Pages = {399--402},
+	Read = {1},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {A Faster Algorithm for Finding Disjoint Paths in Grids},
+	Volume = {1741},
+	Year = {1999}}
+
+@inproceedings{hs-ebrip-97,
+	Author = {Hershberger, John and Suri, Subhash},
+	Booktitle = {Proc. 5th Int. Workshop Algorithms Data Struct.},
+	Comments = {Extended abstract alsp published in Proc. 13th Symp. Comput. Geom., 460--462, 1997.},
+	Date-Added = {2015-06-29 19:58:01 +0000},
+	Date-Modified = {2015-06-29 20:05:29 +0000},
+	Pages = {462--471},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {Efficient breakout routing in printed circuit boards},
+	Volume = {1272},
+	Year = {1997}}
+
+@inproceedings{cc-eaffd-97,
+	Author = {Chan, Wun-Tat and Chin, Francis Y. L.},
+	Booktitle = {Proc. 8th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2015-06-29 19:54:15 +0000},
+	Date-Modified = {2015-06-29 19:56:11 +0000},
+	Note = {Preliminary version of \cite{cc-eafft-00}},
+	Pages = {454--463},
+	Title = {Efficient Algorithms for Finding Disjoint Paths in Grids (Extended Abstract)},
+	Year = {1997}}
+
+@article{cc-eafft-00,
+	Author = {Chan, Wun-Tat and Chin, Francis Y. L.},
+	Comments = {maximum number of (edge- or vertex-) disjoint paths from N sources to N targets in an infinite square grid in O(N^{2.5}) time},
+	Date-Added = {2015-06-29 19:47:01 +0000},
+	Date-Modified = {2015-06-29 20:13:58 +0000},
+	Journal = {J. Algorithms},
+	Note = {Full version of \cite{cc-eaffd-97}},
+	Pages = {337--369},
+	Title = {Efficient Algorithms for Finding the Maximum Number of Disjoint Paths in Grids},
+	Volume = {34},
+	Year = {2000}}
 
 @misc{km-oapg-13,
 	Author = {Klein, Philip and Mozes, Shay},
