--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,184 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2014-10-12 17:27:51 -0500 
+%% Created for Jeff Erickson at 2015-07-09 10:25:09 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{e-mp-1891,
+	Author = {Eberhard, Victor},
+	Date-Added = {2015-07-09 14:59:34 +0000},
+	Date-Modified = {2015-07-09 15:00:19 +0000},
+	Publisher = {Teubner},
+	Read = {1},
+	Title = {Zur Morphologie der Polyeder},
+	Year = {1891}}
+
+@article{hhn-unnrm-12,
+	Author = {Hayashi, Chuichiro and Hayashi, Miwa and Nowik, Tahl},
+	Date-Added = {2015-07-08 22:13:49 +0000},
+	Date-Modified = {2015-07-08 22:16:48 +0000},
+	Journal = {Topology Appl.},
+	Pages = {1467--1474},
+	Read = {1},
+	Title = {Unknotting number and number of {Reidemeister} moves needed for unlinking},
+	Volume = {159},
+	Year = {2012}}
+
+@article{hn-ikd-08,
+	Arxiv = {0708.2509},
+	Author = {Hass, Joel and Nowik, Tahl},
+	Date-Added = {2015-07-08 22:06:35 +0000},
+	Date-Modified = {2015-07-08 22:11:49 +0000},
+	Journal = {Math. Ann.},
+	Pages = {125--137},
+	Read = {1},
+	Title = {Invariants of knot diagrams},
+	Volume = {342},
+	Year = {2008}}
+
+@article{hhsy-musrm-12,
+	Arxiv = {1011.3963},
+	Author = {Hayashi, Chuichiro and Hayashi, Miwa and Sawada, Minori and Yamada, Sayaka},
+	Date-Added = {2015-07-08 21:47:28 +0000},
+	Date-Modified = {2015-07-08 22:12:31 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {10},
+	Pages = {1250099 (13 pages)},
+	Read = {1},
+	Title = {Minimal unknotting sequences of {Reidemeister} moves containing unmatched {RII} moves},
+	Volume = {21},
+	Year = {2012}}
+
+@book{sr-vtp-34,
+	Author = {Steinitz, Ernst and Rademacher, Hans},
+	Comments = {"von Ernst Steinitz, aus dem Nachlass herausgegeben und ergänzt von Hans Rademacher"},
+	Date-Added = {2015-07-08 17:38:49 +0000},
+	Date-Modified = {2015-07-08 17:55:47 +0000},
+	Note = {Reprinted 1976},
+	Publisher = {Springer-Verlag},
+	Read = {1},
+	Series = {Grundlehren der mathematischen Wissenschaften},
+	Title = {Vorlesungen über die Theorie der Polyeder: unter Einschluss der Elemente der Topologie},
+	Volume = {41},
+	Year = {1934}}
+
+@article{cm-dnrn-91,
+	Author = {Curtis, Edward B. and Morrow, James A.},
+	Comments = {square grids only},
+	Date-Added = {2015-07-08 17:25:57 +0000},
+	Date-Modified = {2015-07-08 17:27:27 +0000},
+	Journal = {SIAM J. Appl. Math},
+	Pages = {1011--1029},
+	Title = {The {Dirichlet} to {Neumann} map for a resistor network},
+	Volume = {51},
+	Year = {1991}}
+
+@article{cmm-fccnb-94,
+	Author = {Curtis, Edward B. and Mooers, Edith and Morrow, James},
+	Comments = {"circular network" means cylindrical grid and close variants},
+	Date-Added = {2015-07-08 17:20:55 +0000},
+	Date-Modified = {2015-07-08 17:27:03 +0000},
+	Journal = {Math. Mod. Num. Anal.},
+	Number = {7},
+	Pages = {781--813},
+	Read = {1},
+	Title = {Finding the conductors in circular networks from boundary measurements},
+	Volume = {28},
+	Year = {1994}}
+
+@article{cm-dtrin-90,
+	Author = {Curtis, Edward B. and Morrow, James A.},
+	Date-Added = {2015-07-08 17:18:17 +0000},
+	Date-Modified = {2015-07-08 17:19:01 +0000},
+	Journal = {SIAM J. Appl. Math},
+	Pages = {918--930},
+	Read = {1},
+	Title = {Determining the resitors in a network},
+	Volume = {50},
+	Year = {1990}}
+
+@article{c-rep-92,
+	Author = {{Colin de Verdière}, Yves},
+	Comments = {Apparently unavailable online. Preprint of \cite{c-rep1-94}?},
+	Date-Added = {2015-07-08 17:09:25 +0000},
+	Date-Modified = {2015-07-08 17:15:42 +0000},
+	Journal = {Prepublications de l'Institut Fourier},
+	Pages = {1--20},
+	Title = {Reseaux électriques planaires},
+	Volume = {225},
+	Year = {1992}}
+
+@article{cim-cpgrn-98,
+	Annote = {A circular planar graph is a planar graph embedded in a disk; vertices on the boundary of the disk are called terminals.  A circular pair is a pair of equal-length sequences of terminals (P, Q) = (p_1, \dots, p_k; q_1, \dots, q_k) that appear in that cyclic order around the outer face.  A circular pair (P, Q) is connected through G if there are k disjoint paths connecting p_i to q_i for each i.  Let π(G) denote the set of all connected circular pairs.  G is critical if π(G) ≠ π(H) for every proper minor H of G.
+
+Theorem 1. For any two critical circular planar graphs G and H, we have π(G) = π(H) if and only if G and H are ΔY-equivalent.
+
+Theorem 2. Suppose G is a critical circular planar resistor network.  The values of the resistors can be computed from the effective resistances between each pair of terminals.
+
+},
+	Author = {Curtis, Edward B. and Ingerman, David and Morrow, James A.},
+	Date-Added = {2015-07-08 17:04:59 +0000},
+	Date-Modified = {2015-07-08 17:29:48 +0000},
+	Journal = {Linear Alg. Appl.},
+	Number = {1--3},
+	Pages = {115--150},
+	Read = {1},
+	Title = {Circular planar graphs and resistor networks},
+	Volume = {283},
+	Year = {1998}}
+
+@article{c-rep1-94,
+	Author = {{Colin de Verdière}, Yves},
+	Date-Added = {2015-07-08 17:01:27 +0000},
+	Date-Modified = {2015-07-08 17:02:59 +0000},
+	Journal = {Comment. Math. Helvetici},
+	Pages = {351--374},
+	Read = {1},
+	Title = {Réseaux électriques planaires {I}},
+	Volume = {69},
+	Year = {1994}}
+
+@article{s-cget-92,
+	Author = {Schrijver, Alexander},
+	Date-Added = {2015-06-27 15:59:22 +0000},
+	Date-Modified = {2015-06-27 16:00:44 +0000},
+	Journal = {Discrete Math.},
+	Pages = {415--433},
+	Read = {1},
+	Title = {Circuits in graphs embedded on the torus},
+	Volume = {106/107},
+	Year = {1992}}
+
+@article{s-otuok-92,
+	Abstract = {Let S be a compact orientable surface. For any graph G embedded on S and any closed curve D on S we define μG(D) as the minimum number of intersections of G and D′, where D′ ranges over all closed curves freely homotopic to D. We call G a kernel if μG′ ≠ μG for each proper minor G′ of G. We prove that if G and G′ are kernels with μG = μG′ (in such a way that each face of G is an open disk), then G′ can be obtained from G by a series of the following operations: (i) homotopic shifts over S; (ii) taking the surface dual graph; (iii) ΔY-exchange (i.e., replacing a vertex v of degree 3 by a triangle connecting the three vertices adjacent to v, or conversely).
+},
+	Author = {Schrijver, Alexander},
+	Date-Added = {2015-06-27 15:53:29 +0000},
+	Date-Modified = {2015-06-27 15:56:44 +0000},
+	Journal = {J. Comb. Theory Ser. B},
+	Keywords = {ΔY, surface graph, homotopy, facewidth},
+	Pages = {146--160},
+	Read = {1},
+	Title = {On the uniqueness of kernels},
+	Volume = {55},
+	Year = {1992}}
+
+@article{nt-aafts-96,
+	Author = {Nakahara, Hiroyuki and Takahashi, Hiromitsu},
+	Date-Added = {2015-06-26 07:43:34 +0000},
+	Date-Modified = {2015-07-06 22:37:56 +0000},
+	Journal = {IEICE TRANSACTIONS on Fundamentals of Electronics, Communications and Computer Sciences},
+	Note = {Special Section on Multi-dimensional Mobile Information Network},
+	Number = {7},
+	Pages = {1079--1088},
+	Read = {1},
+	Title = {An Algorithm for the Solution of a Linear system by {$\Delta$-Y} Transformations},
+	Volume = {E79-A},
+	Year = {1996}}
 
 @article{lw-igopc-96,
 	Author = {Lin, Xioa-Song and Wang, Zhenghan},
@@ -283,15 +455,6 @@
 	Title = {Level Planarity Testing in Linear Time},
 	Year = {1998}}
 
-@phdthesis{r-rcpps-06,
-	Author = {{Ribó Mor}, Ares},
-	Date-Added = {2014-07-20 15:26:41 +0000},
-	Date-Modified = {2014-07-20 15:26:41 +0000},
-	School = {Freie Universität Berlin},
-	Title = {Realization and Counting Problems for Planar Structures: Trees and Linkages, Polytopes and Polyominoes},
-	Year = {2006},
-	Bdsk-Url-1 = {http://www.diss.fu-berlin.de/diss/receive/FUDISS_thesis_000000002075}}
-
 @article{ht-ept-74,
 	Author = {Hopcroft, John and Tarjan, Robert E.},
 	Date-Added = {2014-07-20 15:09:11 +0000},
@@ -386,9 +549,10 @@
 @article{cgv-rep-96,
 	Author = {{Colin de Verdière}, Yves and Gitler, Isidoro and Vertigan, Dirk},
 	Date-Added = {2014-07-12 16:18:22 +0000},
-	Date-Modified = {2014-07-12 16:19:26 +0000},
+	Date-Modified = {2015-07-08 17:01:25 +0000},
 	Journal = {Comment. Math. Helvetici},
 	Number = {144--167},
+	Read = {1},
 	Title = {Reseaux électriques planaires {II}},
 	Volume = {71},
 	Year = {1996}}
@@ -677,8 +841,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{a-wtns-60,
 	Author = {{Akers, Jr.}, Sheldon B.},
+	Comments = {Conjectured that any planar network with two terminals can be reduced to a single edge by series redulctions, parallel reductions, and ΔY-transformations},
 	Date-Added = {2013-10-29 03:39:00 +0000},
-	Date-Modified = {2013-11-21 15:03:37 +0000},
+	Date-Modified = {2015-06-27 15:49:49 +0000},
 	Journal = {Oper. Res.},
 	Keywords = {ΔY},
 	Number = {3},
@@ -7426,15 +7591,16 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Volume = {10},
 	Year = {1960}}
 
-@article{s-pr-16,
+@article{s-pr-1916,
 	Author = {Steinitz, Ernst},
+	Comments = {First proof of Steintz's theorem},
 	Date-Added = {2011-11-07 12:45:05 +0000},
-	Date-Modified = {2011-12-14 16:26:14 +0000},
+	Date-Modified = {2015-07-09 15:00:48 +0000},
 	Journal = {Enzyklopädie der mathematischen Wissenschaften mit Einschluss ihrer Anwendungen},
 	Number = {12},
 	Pages = {1--139},
 	Read = {1},
-	Title = {Polyeder und Raumeinteilungen},
+	Title = {Polyeder und {Raumeinteilungen}},
 	Url = {http://gdz.sub.uni-goettingen.de/dms/load/img/?PPN=PPN360609767&DMDID=dmdlog203},
 	Volume = {III.AB},
 	Year = {1916},
