--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,59 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-18 12:43:58 -0400 
+%% Created for Jeff Erickson at 2015-07-19 10:05:13 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{c-usac-1864,
+	Author = {Clebsch, Alfred},
+	Date-Added = {2015-07-19 13:57:56 +0000},
+	Date-Modified = {2015-07-19 14:04:15 +0000},
+	Journal = {J. Reine Angew. Math.},
+	Pages = {98--100},
+	Title = {Ueber die {Singularitäten} algebraischer {Curven}},
+	Volume = {64},
+	Year = {1864}}
+
+@article{c-decdc-1864,
+	Author = {Clebsch, Alfred},
+	Comments = {Called Riemann's paramater p the "genus" ("Geschlecht") of a curve},
+	Date-Added = {2015-07-19 13:39:17 +0000},
+	Date-Modified = {2015-07-19 14:02:23 +0000},
+	Journal = {J. Reine Angew. Math.},
+	Pages = {43--63},
+	Read = {1},
+	Title = {Ueber diejenigen ebenen {Curven}, deren {Coordinaten} rationale {Functionen} eines {Parameters} sind},
+	Volume = {64},
+	Year = {1864}}
+
+@article{c-tpc-1865,
+	Author = {Cayley, Arthur},
+	Comments = {"unicursal"},
+	Date-Added = {2015-07-19 13:34:49 +0000},
+	Date-Modified = {2015-07-19 13:42:41 +0000},
+	Journal = {Proc. London Math. Soc.},
+	Note = {Read October 16, 1965.  \emph{Mathematical Papers} VI, 1--8, 1893.},
+	Number = {3},
+	Pages = {1--11},
+	Read = {1},
+	Title = {On the transformation of plane curves},
+	Volume = {1},
+	Year = {1865--66}}
+
+@book{s-thpc-76,
+	Address = {Dublin},
+	Author = {Salmon, George},
+	Date-Added = {2015-07-19 13:09:00 +0000},
+	Date-Modified = {2015-07-19 13:10:06 +0000},
+	Editor = {Third},
+	Publisher = {Hodges, Foster, and Figgis},
+	Read = {1},
+	Title = {A Treatise on Higher Plane Curves},
+	Year = {1876}}
 
 @article{b-vki-96,
 	Author = {Bar-Natan, Dror},
