--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,41 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-20 22:08:40 -0500 
+%% Created for Jeff Erickson at 2015-07-21 16:34:30 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cite-key,
+	Date-Added = {2015-07-21 21:33:08 +0000},
+	Date-Modified = {2015-07-21 21:33:08 +0000}}
+
+@article{nnu-dnk-98,
+	Author = {Nakamura, K. and Nakanishi, Y. and Uchida, Y.},
+	Comments = {v_2(p,q) = (p^2-1)(q^2-1)/24 is claimed as fact, without justification},
+	Date-Added = {2015-07-21 21:28:14 +0000},
+	Date-Modified = {2015-07-21 21:32:39 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {5},
+	Pages = {639--650},
+	Read = {1},
+	Title = {Delta-unknotting number of knots},
+	Volume = {7},
+	Year = {1998}}
+
+@article{o-duosc-90,
+	Author = {Okada, Masae},
+	Date-Added = {2015-07-21 21:19:34 +0000},
+	Date-Modified = {2015-07-21 21:24:01 +0000},
+	Journal = {J. Math. Soc. Japan},
+	Number = {2},
+	Pages = {713--717},
+	Read = {1},
+	Title = {Delta-unknotting operation and the second coefficient of the {Conway} polynomial},
+	Volume = {42},
+	Year = {1990}}
 
 @article{al-vitk-96,
 	Arxiv = {q-alg/9506009},
@@ -25,7 +54,7 @@
 
 @mastersthesis{o-ftvis-02,
 	Author = {Okuda, Naosuke},
-	Comments = {Willerton's fish.  Proves -floor{n^2/16} ≤ v_2(K).},
+	Comments = {Willerton's fish. Proves -floor{n^2/16} ≤ v_2(K).},
 	Date-Added = {2015-07-21 00:54:32 +0000},
 	Date-Modified = {2015-07-21 03:08:36 +0000},
 	Month = {February},
@@ -43,7 +72,8 @@
 	Read = {1},
 	Title = {Introduction to {Vassiliev} knot invariants},
 	Url = {http://www.pdmi.ras.ru/~duzhin/papers/cdbook},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.pdmi.ras.ru/~duzhin/papers/cdbook}}
 
 @article{bl-kpvi-93,
 	Author = {Birman, Joan S. and Lin, Xiao-Song},
