--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,146 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-21 16:34:30 -0500 
+%% Created for Jeff Erickson at 2015-07-24 07:00:29 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{t-npmbt-98,
+	Author = {Traczyk, Paweł},
+	Booktitle = {Knot Theory},
+	Date-Added = {2015-07-24 11:36:27 +0000},
+	Date-Modified = {2015-07-24 11:49:22 +0000},
+	Editor = {Jones, Vaughan F. R. and Kania-Bartoszyńska, Joanna and Przytycki, Józef H. and Traczyk, Paweł and Turaev, Vladimir G.},
+	Number = {42},
+	Pages = {409--419},
+	Publisher = {Inst. Math., Polish Acad. Sci.},
+	Read = {1},
+	Series = {Banach Center Publ.},
+	Title = {A new proof of {Marvok's} braid theorem},
+	Year = {1998}}
+
+@incollection{bb-bs-05,
+	Arxiv = {math/0409205},
+	Author = {Birman, Joan S. and Brendle, Tara E.},
+	Booktitle = {Handbook of Knot Theory},
+	Date-Added = {2015-07-24 11:28:20 +0000},
+	Date-Modified = {2015-07-24 11:33:10 +0000},
+	Pages = {19--103},
+	Publisher = {Elsevier},
+	Read = {1},
+	Title = {Braids: {A} Survey},
+	Year = {2005}}
+
+@article{lr-mt3m-97,
+	Arxiv = {math/0405498v1},
+	Author = {Labropoulou, Sofia and Rourke, Colin},
+	Comments = {Alexander's theorem},
+	Date-Added = {2015-07-24 01:11:32 +0000},
+	Date-Modified = {2015-07-24 01:12:42 +0000},
+	Journal = {Topology Appl.},
+	Pages = {95--122},
+	Read = {1},
+	Title = {Markov’s theorem in 3–manifolds},
+	Volume = {78},
+	Year = {1997}}
+
+@article{a-lskc-23,
+	Author = {Alexander, James W.},
+	Date-Added = {2015-07-24 01:08:31 +0000},
+	Date-Modified = {2015-07-24 01:11:30 +0000},
+	Journal = {Bull. Amer. Math. Soc.},
+	Number = {8},
+	Pages = {369--372},
+	Read = {1},
+	Title = {A lemma on systems of knotted curves},
+	Volume = {26},
+	Year = {1923}}
+
+@article{b-uvk-1897,
+	Author = {Brunn, Hermann},
+	Date-Added = {2015-07-24 01:04:15 +0000},
+	Date-Modified = {2015-07-24 01:07:18 +0000},
+	Journal = {Verh. des intern. Math. Kongr. Zürich},
+	Pages = {256--259},
+	Read = {1},
+	Title = {Über verknotete {Kurven}},
+	Volume = {1},
+	Year = {1897}}
+
+@article{m-tkd-86,
+	Author = {Morton, Hugh R.},
+	Date-Added = {2015-07-24 00:47:10 +0000},
+	Date-Modified = {2015-07-24 01:04:13 +0000},
+	Journal = {Math. Proc. Cambridge Phil. Soc.},
+	Number = {2},
+	Pages = {247--260},
+	Read = {1},
+	Title = {Threading knot diagrams},
+	Volume = {99},
+	Year = {1986}}
+
+@book{b-blmcg-75,
+	Author = {Birman, Joan S.},
+	Date-Added = {2015-07-24 00:44:22 +0000},
+	Date-Modified = {2015-07-24 00:45:31 +0000},
+	Number = {82},
+	Publisher = {Princeton Univ. Press},
+	Read = {1},
+	Series = {Annals of Math. Studies},
+	Title = {Braids, Links, and Mapping Class Groups},
+	Year = {1975}}
+
+@article{v-rlbna-90,
+	Author = {Vogel, Pierre},
+	Comments = {O(n^2) moves},
+	Date-Added = {2015-07-23 23:53:07 +0000},
+	Date-Modified = {2015-07-24 01:13:27 +0000},
+	Journal = {Comment. Math. Helvetici},
+	Number = {1},
+	Pages = {104--113},
+	Read = {1},
+	Title = {Representation of links by braids: {A} new algorithm},
+	Volume = {65},
+	Year = {1990}}
+
+@article{y-mnsce-87,
+	Author = {Yamada, Shuji},
+	Date-Added = {2015-07-23 23:48:10 +0000},
+	Date-Modified = {2015-07-23 23:48:54 +0000},
+	Journal = {Invent. Math.},
+	Pages = {347--356},
+	Read = {1},
+	Title = {The minimal number of {Seifert} circles equals the braid index of a link},
+	Volume = {89},
+	Year = {1987}}
+
+@article{t-atics-99,
+	Arxiv = {math/9906125},
+	Author = {Tchernov, Vladimir},
+	Date-Added = {2015-07-22 14:43:27 +0000},
+	Date-Modified = {2015-07-22 14:44:13 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {1},
+	Pages = {71--97},
+	Read = {1},
+	Title = {Arnold-type invriants of curves on surfaces},
+	Volume = {8},
+	Year = {1999}}
+
+@article{m-vicpc-03,
+	Author = {Merkov, Alexander B.},
+	Date-Added = {2015-07-22 13:25:29 +0000},
+	Date-Modified = {2015-07-22 14:37:32 +0000},
+	Journal = {Sbornik: Math.},
+	Number = {9},
+	Pages = {1301--1330},
+	Read = {1},
+	Title = {Vassiliev invariants classify plane curves and doodles},
+	Volume = {194},
+	Year = {2003}}
 
 @article{cite-key,
 	Date-Added = {2015-07-21 21:33:08 +0000},
@@ -2596,9 +2730,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {2001}}
 
 @article{bs-ascs-84,
-	Author = {Birman, Jaon S. and Series, Caroline},
+	Author = {Birman, Joan S. and Series, Caroline},
 	Date-Added = {2012-06-20 15:40:48 +0000},
-	Date-Modified = {2012-06-20 15:41:57 +0000},
+	Date-Modified = {2015-07-24 00:44:35 +0000},
 	Journal = {J. London Math. Soc.},
 	Pages = {331--342},
 	Read = {1},
