add to topology.bib

--- a/topology.bib
+++ b/topology.bib
@@ -495,6 +495,15 @@
 	Volume = {159},
 	Year = {2012}}
 
+@article{h-lbnrm-06,
+	Author = {Hayashi, Chuichiro},
+	Journal = {Journal of Knot Theory and Its Ramifications},
+	Pages = {313--325},
+	Read = {1},
+	Title = {A lower bound for the number of {Reidemeister} moves for unknotting},
+	Volume = {15},
+	Year = {2006}}
+
 @article{hn-ikd-08,
 	Arxiv = {0708.2509},
 	Author = {Hass, Joel and Nowik, Tahl},
