--- a/topology.bib
+++ b/topology.bib
@@ -8,6 +8,25 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{ao-gasi-99,
+	Author = {Arakawa, Hideyo and Ozawa, Tetsuya},
+	Journal = {Journal of Knot Theory and Its Ramifications},
+	Pages = {551--567},
+	Read = {1},
+	Title = {A generalization of {Arnold's} strangeness invariant},
+	Volume = {8},
+	Number = {5},
+	Year = {1999}}
+
+@article{o-fotip-99,
+	Author = {Ozawa, Tetsuya},
+	Journal = {Journal of Knot Theory and Its Ramifications},
+	Pages = {33--47},
+	Read = {1},
+	Title = {Finite order topological invariants of plane curves},
+	Volume = {8},
+	Number = {1},
+	Year = {1999}}
 
 @incollection{t-npmbt-98,
 	Author = {Traczyk, Paweł},
