--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-24 07:00:29 -0500 
+%% Created for Jeff Erickson at 2015-07-30 12:00:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{k-edckf-1885,
+	Author = {Kirkman, Thomas P.},
+	Date-Added = {2015-07-30 16:13:26 +0000},
+	Date-Modified = {2015-07-30 16:14:16 +0000},
+	Journal = {Trans. Royal Soc. Edinburgh},
+	Pages = {281--309},
+	Title = {The enumeration, description and construction of knots of fewer than ten crossings},
+	Volume = {32},
+	Year = {1885}}
 
 @incollection{t-npmbt-98,
 	Author = {Traczyk, Paweł},
