--- a/topology.bib
+++ b/topology.bib
@@ -2,38 +2,53 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-30 12:00:11 -0500 
+%% Created for Jeff Erickson at 2015-07-30 16:13:06 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{o-ipcpv-04,
+	Author = {Ochiai, Tomoshiro},
+	Date-Added = {2015-07-30 21:00:15 +0000},
+	Date-Modified = {2015-07-30 21:11:17 +0000},
+	Journal = {J. Math. Sci. Univ. Tokyo},
+	Pages = {155--175},
+	Title = {Invariants of Plane Curves and {Polyak}–{Viro} Type Formulas for {Vassiliev} Invariants},
+	Volume = {11},
+	Year = {2004}}
+
 @article{ao-gasi-99,
 	Author = {Arakawa, Hideyo and Ozawa, Tetsuya},
-	Journal = {Journal of Knot Theory and Its Ramifications},
+	Comments = {basepoint-free formula for strangeness, obtained by averaging Shumakovitch's formula over all possible basepoints},
+	Date-Modified = {2015-07-30 20:59:19 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {5},
 	Pages = {551--567},
 	Read = {1},
 	Title = {A generalization of {Arnold's} strangeness invariant},
 	Volume = {8},
-	Number = {5},
 	Year = {1999}}
 
 @article{o-fotip-99,
 	Author = {Ozawa, Tetsuya},
-	Journal = {Journal of Knot Theory and Its Ramifications},
+	Date-Modified = {2015-07-30 20:48:52 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {1},
 	Pages = {33--47},
 	Read = {1},
 	Title = {Finite order topological invariants of plane curves},
 	Volume = {8},
-	Number = {1},
 	Year = {1999}}
 
 @article{k-edckf-1885,
 	Author = {Kirkman, Thomas P.},
 	Date-Added = {2015-07-30 16:13:26 +0000},
-	Date-Modified = {2015-07-30 16:14:16 +0000},
+	Date-Modified = {2015-07-30 21:11:45 +0000},
 	Journal = {Trans. Royal Soc. Edinburgh},
 	Pages = {281--309},
+	Read = {1},
 	Title = {The enumeration, description and construction of knots of fewer than ten crossings},
 	Volume = {32},
 	Year = {1885}}
@@ -526,7 +541,9 @@
 
 @article{h-lbnrm-06,
 	Author = {Hayashi, Chuichiro},
-	Journal = {Journal of Knot Theory and Its Ramifications},
+	Comments = {defines cowrithe for knot diagrams; conjectures Ω(n^2) moves to separate split link},
+	Date-Modified = {2015-07-30 20:59:19 +0000},
+	Journal = {J. Knot Theory Ramif.},
 	Pages = {313--325},
 	Read = {1},
 	Title = {A lower bound for the number of {Reidemeister} moves for unknotting},
