--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,39 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-30 16:13:06 -0500 
+%% Created for Jeff Erickson at 2015-07-31 14:29:22 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{k-foist-98e,
+	Author = {Kazarian, Maxim È.},
+	Date-Added = {2015-07-30 21:38:42 +0000},
+	Date-Modified = {2015-07-31 19:29:22 +0000},
+	Journal = {Proc. Steklov Inst. Math},
+	Note = {English translation of \cite{k-foist-98r}},
+	Pages = {202--213},
+	Read = {1},
+	Title = {First Order Invariants of Strangeness Type for Plane Curves},
+	Volume = {221},
+	Year = {1998}}
+
+@incollection{k-foist-98r,
+	Author = {Kazarian, Maxim È.},
+	Booktitle = {Local and global problems of singularity theory},
+	Date-Added = {2015-07-30 21:34:58 +0000},
+	Date-Modified = {2015-07-31 19:29:19 +0000},
+	Editor = {Zakalyukin, Vladimir M.},
+	Note = {\nocite{k-foist-98e} In Russian.},
+	Pages = {213--224},
+	Publisher = {Nauka},
+	Read = {1},
+	Series = {Trudy Mat. Inst. Steklov},
+	Title = {First Order Invariants of Strangeness Type for Plane Curves},
+	Volume = {221},
+	Year = {1998}}
 
 @article{o-ipcpv-04,
 	Author = {Ochiai, Tomoshiro},
@@ -337,9 +364,10 @@
 @article{b-vki-96,
 	Author = {Bar-Natan, Dror},
 	Date-Added = {2015-07-18 05:56:48 +0000},
-	Date-Modified = {2015-07-18 05:57:38 +0000},
+	Date-Modified = {2015-07-30 21:53:55 +0000},
 	Journal = {Topology},
 	Pages = {423--472},
+	Read = {1},
 	Title = {On the {Vassiliev} knot invariants},
 	Volume = {34},
 	Year = {1996}}
