--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-31 14:29:22 -0500 
+%% Created for Jeff Erickson at 2015-07-31 14:32:46 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -25,9 +25,9 @@
 	Author = {Kazarian, Maxim È.},
 	Booktitle = {Local and global problems of singularity theory},
 	Date-Added = {2015-07-30 21:34:58 +0000},
-	Date-Modified = {2015-07-31 19:29:19 +0000},
+	Date-Modified = {2015-07-31 19:32:46 +0000},
 	Editor = {Zakalyukin, Vladimir M.},
-	Note = {\nocite{k-foist-98e} In Russian.},
+	Note = {In Russian; English translation in \cite{k-foist-98e} },
 	Pages = {213--224},
 	Publisher = {Nauka},
 	Read = {1},
@@ -6683,9 +6683,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{s-efspc-95,
 	Author = {Shumakovich, Aleksandr},
 	Date-Added = {2012-01-06 12:11:10 +0000},
-	Date-Modified = {2012-01-06 23:19:30 +0000},
+	Date-Modified = {2015-07-31 19:32:09 +0000},
 	Journal = {Algebra i Analiz},
-	Note = {Corrections in \emph{Algebra i Analiz} 7(5):252--254, 1995. \nocite{s-efspc-96} In Russian.},
+	Note = {Corrections in \emph{Algebra i Analiz} 7(5):252--254, 1995. In Russian; English translation in \cite{s-efspc-96}.},
 	Number = {3},
 	Pages = {165--199},
 	Read = {1},
@@ -7100,11 +7100,12 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{s-efspc-96,
 	Author = {Shumakovich, Aleksandr},
 	Date-Added = {2011-12-18 16:46:40 +0000},
-	Date-Modified = {2012-01-06 12:12:42 +0000},
+	Date-Modified = {2015-07-31 19:31:38 +0000},
 	Journal = {St. Petersburg Math. J.},
 	Note = {English translation of \cite{s-efspc-95}.},
 	Number = {3},
 	Pages = {445--472},
+	Read = {1},
 	Title = {Explicit formulas for the strangeness of plane curves},
 	Volume = {7},
 	Year = {1996}}
