--- a/topology.bib
+++ b/topology.bib
@@ -7,7 +7,23 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{k-foist-98a,
+	Author = {Kazarian, Maxim Eduardovich},
+	Journal = {Trudy Matematicheskogo Instituta imeni V.A.\ Steklova},
+	Note = {In Russian.  English translation in \cite{k-foist-98b}.},
+	Pages = {213--224},
+	Title = {First order invariants of strangeness type for plane curves},
+	Volume = {221},
+	Year = {1998}}
 
+@article{k-foist-98b,
+	Author = {Kazarian, Maxim Eduardovich},
+	Journal = {Proceedings of the Steklov Institute of Mathematics},
+	Note = {English translation of \cite{k-foist-98a}.},
+	Pages = {202--213},
+	Title = {First order invariants of strangeness type for plane curves},
+	Volume = {221},
+	Year = {1998}}
 
 @article{o-ipcpv-04,
 	Author = {Ochiai, Tomoshiro},
@@ -7077,7 +7093,7 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Note = {English translation of \cite{s-efspc-95}.},
 	Number = {3},
 	Pages = {445--472},
-	Title = {Explicit formulas for the strangeness of plane curves},
+	Title = {Explicit formulas for the strangeness of a plane curve},
 	Volume = {7},
 	Year = {1996}}
 
