--- a/topology.bib
+++ b/topology.bib
@@ -7,29 +7,11 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@article{k-foist-98a,
-	Author = {Kazarian, Maxim Eduardovich},
-	Journal = {Trudy Matematicheskogo Instituta imeni V.A.\ Steklova},
-	Note = {In Russian.  English translation in \cite{k-foist-98b}.},
-	Pages = {213--224},
-	Title = {First order invariants of strangeness type for plane curves},
-	Volume = {221},
-	Year = {1998}}
-
-@article{k-foist-98b,
-	Author = {Kazarian, Maxim Eduardovich},
-	Journal = {Proceedings of the Steklov Institute of Mathematics},
-	Note = {English translation of \cite{k-foist-98a}.},
-	Pages = {202--213},
-	Title = {First order invariants of strangeness type for plane curves},
-	Volume = {221},
-	Year = {1998}}
-
 @article{k-foist-98e,
 	Author = {Kazarian, Maxim È.},
 	Date-Added = {2015-07-30 21:38:42 +0000},
 	Date-Modified = {2015-07-31 19:29:22 +0000},
-	Journal = {Proc. Steklov Inst. Math},
+	Journal = {Proceedings of the Steklov Institute of Mathematics},
 	Note = {English translation of \cite{k-foist-98r}},
 	Pages = {202--213},
 	Read = {1},
@@ -47,7 +29,7 @@
 	Pages = {213--224},
 	Publisher = {Nauka},
 	Read = {1},
-	Series = {Trudy Mat. Inst. Steklov},
+	Series = {Trudy Matematicheskogo Instituta imeni V.A. Steklova},
 	Title = {First Order Invariants of Strangeness Type for Plane Curves},
 	Volume = {221},
 	Year = {1998}}
