--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-07-31 14:32:46 -0500 
+%% Created for Jeff Erickson at 2015-08-02 07:19:04 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -23,11 +23,11 @@
 
 @incollection{k-foist-98r,
 	Author = {Kazarian, Maxim È.},
-	Booktitle = {Local and global problems of singularity theory},
+	Booktitle = {Local and Global Problems of Singularity Theory},
 	Date-Added = {2015-07-30 21:34:58 +0000},
-	Date-Modified = {2015-07-31 19:32:46 +0000},
+	Date-Modified = {2015-07-31 19:34:04 +0000},
 	Editor = {Zakalyukin, Vladimir M.},
-	Note = {In Russian; English translation in \cite{k-foist-98e} },
+	Note = {In Russian; English translation in \cite{k-foist-98e}},
 	Pages = {213--224},
 	Publisher = {Nauka},
 	Read = {1},
@@ -684,11 +684,11 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{c-rep1-94,
 	Author = {{Colin de Verdière}, Yves},
 	Date-Added = {2015-07-08 17:01:27 +0000},
-	Date-Modified = {2015-07-08 17:02:59 +0000},
+	Date-Modified = {2015-08-02 12:17:33 +0000},
 	Journal = {Comment. Math. Helvetici},
 	Pages = {351--374},
 	Read = {1},
-	Title = {Réseaux électriques planaires {I}},
+	Title = {Réseaux électriques planaires {I}},
 	Volume = {69},
 	Year = {1994}}
 
@@ -1099,11 +1099,11 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{cgv-rep-96,
 	Author = {{Colin de Verdière}, Yves and Gitler, Isidoro and Vertigan, Dirk},
 	Date-Added = {2014-07-12 16:18:22 +0000},
-	Date-Modified = {2015-07-08 17:01:25 +0000},
+	Date-Modified = {2015-08-02 12:18:57 +0000},
 	Journal = {Comment. Math. Helvetici},
 	Number = {144--167},
 	Read = {1},
-	Title = {Reseaux électriques planaires {II}},
+	Title = {Réseaux électriques planaires {II}},
 	Volume = {71},
 	Year = {1996}}
 
@@ -1152,10 +1152,11 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Gitler, Isidoro and Sagois, Feliú},
 	Comments = {reduce planar graph with 3 terminals in $O(n^4)$ time},
 	Date-Added = {2014-07-12 15:52:18 +0000},
-	Date-Modified = {2014-07-12 15:55:52 +0000},
+	Date-Modified = {2015-08-02 06:31:37 +0000},
 	Journal = {Networks},
 	Number = {2},
 	Pages = {174--186},
+	Read = {1},
 	Title = {On terminal delta-wye reducibility of planar graphs},
 	Volume = {57},
 	Year = {2011}}
