--- a/topology.bib
+++ b/topology.bib
@@ -2,10 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-02 07:19:04 -0500 
+%% Created for Jeff Erickson at 2015-08-02 09:17:54 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@book{gv-grp-11,
+	Address = {Mexico},
+	Author = {Gitler, Isidoro and Villareal, Rafael H.},
+	Date-Added = {2015-08-02 14:11:24 +0000},
+	Date-Modified = {2015-08-02 14:16:53 +0000},
+	Number = {35},
+	Publisher = {Soc. Mat. Mexicana},
+	Series = {Aportaciones Matemáticas Textos},
+	Title = {Graphs, Rings and Polyhedra},
+	Year = {2011}}
+
+@techreport{l-ncwt-63,
+	Author = {Lehman, Alfred},
+	Date-Added = {2015-08-02 13:03:26 +0000},
+	Date-Modified = {2015-08-02 13:05:30 +0000},
+	Institution = {Math. Res. Center, Univ, Wisconsin},
+	Month = {March},
+	Number = {383},
+	Read = {1},
+	Title = {A necessary condition for wye-delta transformation},
+	Type = {{MRC} {Technical} {Summary} {Report}},
+	Url = {www.dtic.mil/dtic/tr/fulltext/u2/403836.pdf},
+	Year = {1963}}
 
 @article{k-foist-98e,
 	Author = {Kazarian, Maxim È.},
@@ -1140,10 +1166,10 @@ By abstracting from the $\Delta\leftrightarrow$Y transformations their relationa
 A main objective of studying $\Delta\leftrightarrow$Y transformations is finding efficient algorithms. Most of the results presented in this work imply efficient algorithms. For some, we explicitly provide the algorithms.},
 	Author = {Gitler, Isidoro},
 	Date-Added = {2014-07-12 15:56:38 +0000},
-	Date-Modified = {2014-07-12 16:00:11 +0000},
+	Date-Modified = {2015-08-02 14:07:14 +0000},
 	Note = {Cited in \cite{gs-tdrpg-11}},
 	School = {Department of Combinatorics and Optimization, University of Waterloo},
-	Title = {Delta-wye-delta transformations, algorithms and applications},
+	Title = {Delta-wye-delta Transformations: Algorithms and Applications},
 	Year = {1991}}
 
 @article{gs-tdrpg-11,
@@ -7104,8 +7130,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Note = {English translation of \cite{s-efspc-95}.},
 	Number = {3},
 	Pages = {445--472},
-	Title = {Explicit formulas for the strangeness of a plane curve},
 	Read = {1},
+	Title = {Explicit formulas for the strangeness of a plane curve},
 	Volume = {7},
 	Year = {1996}}
 
