network reliability via star-delta

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,60 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-02 09:17:54 -0500 
+%% Created for Jeff Erickson at 2015-08-13 12:33:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{rf-tsnrc-77,
+	Author = {Rosenthal, Arnie and Frisque, David E.},
+	Date-Added = {2015-08-13 17:15:02 +0000},
+	Date-Modified = {2015-08-13 17:32:16 +0000},
+	Journal = {Networks},
+	Number = {2},
+	Pages = {97--111},
+	Read = {1},
+	Title = {Transformations for simplifying network reliability calculations},
+	Volume = {7},
+	Year = {1977}}
+
+@article{t-sdtnr-93,
+	Author = {Traldi, Lorenzo},
+	Date-Added = {2015-08-13 17:07:42 +0000},
+	Date-Modified = {2015-08-13 17:08:28 +0000},
+	Journal = {Networks},
+	Number = {3},
+	Pages = {151--157},
+	Read = {1},
+	Title = {On the star-delta transformation in network reliability},
+	Volume = {23},
+	Year = {1993}}
+
+@article{g-cdsp-83,
+	Author = {Grosh, Doris Lloyd},
+	Date-Added = {2015-08-13 17:02:23 +0000},
+	Date-Modified = {2015-08-13 17:03:23 +0000},
+	Journal = {IEEE Trans. Reliability},
+	Number = {4},
+	Pages = {391--394},
+	Read = {1},
+	Title = {Comments on the delta-star problem},
+	Volume = {R-32},
+	Year = {1983}}
+
+@article{gs-dtare-78,
+	Author = {Gupta, Hariom and Sharma, Jaydev},
+	Date-Added = {2015-08-13 17:00:38 +0000},
+	Date-Modified = {2015-08-13 17:05:35 +0000},
+	Journal = {IEEE Trans. Reliability},
+	Number = {3},
+	Pages = {212--214},
+	Read = {1},
+	Title = {A delta-star transformation approach for reliability estimation},
+	Volume = {R-27},
+	Year = {1978}}
 
 @book{gv-grp-11,
 	Address = {Mexico},
@@ -31,7 +79,8 @@
 	Title = {A necessary condition for wye-delta transformation},
 	Type = {{MRC} {Technical} {Summary} {Report}},
 	Url = {www.dtic.mil/dtic/tr/fulltext/u2/403836.pdf},
-	Year = {1963}}
+	Year = {1963},
+	Bdsk-Url-1 = {www.dtic.mil/dtic/tr/fulltext/u2/403836.pdf}}
 
 @article{k-foist-98e,
 	Author = {Kazarian, Maxim È.},
